<resources>

    <!-- Strings for Main Activity -->
    <string name="app_name">Clout</string>
    <string name="clout_score">0</string>
    <string name="event_agreement">Event Agreement</string>
    <string name="item_agreement">Item Agreement</string>

    <!-- Strings for Login Activity -->
    <string name="email">EMAIL</string>
    <string name="password">PASSWORD</string>
    <string name="retype_password">Retype PASSWORD</string>
    <string name="submit">SUBMIT</string>
    <string name="login_title">CLOUT</string>
    <string name="retype">RETYPE PASSWORD</string>
    <string name="borrower_email_or_accountname">Borrower &amp;AccountName</string>
    <string name="who_will_borrow_funds">Who will borrow funds?</string>
    <string name="how_much_will_you_send">How Much Will You Send?</string>
    <string name="dollar_amount">$Dollar Amount$</string>
    <string name="what_date_must_the_funds_be_returned">What Date Must The Funds Be Returned?</string>
    <string name="choose_date">Choose Date</string>
    <string name="these_funds_don_t_need_to_be_returned">These Funds Don\'t Need to Be Returned</string>
    <string name="overAmount">You can not transact an amount over $2000.00</string>
    <string name="addAmount">How Much Cash Would You Like To Add?</string>
    <string name="money_sign">$</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="usdCurSign">$</string>
    <string name="no_date_selected">No Date Selected</string>
    <string name="addCash">ADD CASH</string>
    <string name="withdrawnow">WITHDRAW FUNDS NOW</string>
    <string name="yes">YES</string>
    <string name="add_friend">ADD FRIEND</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="eventTransaction">Event Transaction</string>
    <string name="money_transaction">Money Transaction</string>
    <string name="zero_value">0.00</string>
    <string name="trans_description">Description of transaction</string>
    <string name="whoTextViewMain">Who will you send this transaction to?</string>
    <string name="accountname"><![CDATA[&Accountname]]></string>

    <string-array name="event_types">
        <item>Choose Event Type</item>
        <item>Meeting</item>
        <item>Date</item>
        <item>Party</item>
        <item>other</item>
    </string-array>
    <string name="title_activity_ads">MainActivity</string>
    <string name="action_settings">Settings</string>

    <string name="msg_token_fmt">message</string>

    <!-- -
        This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="listview_item_pretext">listViewItem</string>
    <string name="funded">Money Transactions</string>
    <string name="nonFunded">Pre-Funded Money Transaction</string>
    <string name="great_score_increase">\"GREAT: +1 Point Increase"</string>
    <string name="terrible">TERRIBLE: -2 Point Decrease</string>
    <string name="bad">BAD: -.50 Point Decrease</string>
    <string name="okay">Ok: +.50 Point Increase</string>
    <string name="unfollow">Unfollow</string>
    <string name="stripekey">sk_test_51GuYBuLsgkZ2wTkEPW1f3aeAOcqJTWWgDTq2frFZSpsn2dtM1zLtiGQd3E90OGFNo7VPmL9Y2w62zpvwiwf5nwW5007TNe558H</string>
    <string name="open">OPEN</string>
    <string name="close">CLOSE</string>
    <string name="generate_random_user_key">Generate Random User Key</string>
    <string name="create_random_user_key">Create Random User Key</string>
    <string name="todo">profile image</string>
    <string name="to_post_feed">P</string>
    <string name="click_here_to_go_to_your_profile">Click here to go to your profile</string>
    <string name="click_the_score_button_when_you_want_to_create_a_new_report_on_someone">Click the score button, when you want to create a new report on someone.</string>
    <string name="return_debts_show_up_on_time_and_return_items_without_damage_and_you_score_will_go_up">Return debts, show up on time and return items without damage and you score will go up.</string>
    <string name="this_score_shows_the_world_if_you_are_trust_worthy">This score shows the world if you are trust worthy.</string>
    <string name="this_is_your_clout_score">This is your clout score!</string>
    <string name="received">Received</string>
    <string name="submitted">Submitted</string>
    <string name="accountkey">AccountKey</string>
    <string name="switch_to_dark_mode">Switch To Dark Mode</string>
    <string name="use_random_user_key_for_all_3rd_party_use">Use random user key for all 3rd party use</string>
    <string name="dark_mode">Dark Mode</string>
</resources>
